[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Tools/CameraShake.gd" type="Script" id=2]
[ext_resource path="res://Lighting/OccluderBlit.tres" type="Material" id=3]
[ext_resource path="res://Sprites/Wall/Wall_16.png" type="Texture" id=4]
[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Floor/Floor.png" type="Texture" id=6]
[ext_resource path="res://Prefabs/Bullet.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/Monster.tscn" type="PackedScene" id=8]
[ext_resource path="res://Art/Test-480-270.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Heart/Heart-Full.png" type="Texture" id=10]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("ShadowViewport")

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "Wall_16.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0.172549, 0.160784, 0.156863, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Floor.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 0.0588235, 0.0588235, 0.0627451, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
player_scene = ExtResource( 5 )
bullet_scene = ExtResource( 7 )
monster_scene = ExtResource( 8 )

[node name="ShadowViewport" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
render_target_update_mode = 3

[node name="ShadowCamera" type="Camera" parent="ShadowViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
projection = 1
size = 960.0

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="GameOverlay" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GameOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverlay/MarginContainer"]
margin_left = 5.0
margin_right = 475.0
margin_bottom = 265.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverlay/MarginContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 265.0
custom_constants/separation = 0

[node name="TexHeart1" type="TextureRect" parent="GameOverlay/MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 265.0
texture = ExtResource( 10 )

[node name="TexHeart2" type="TextureRect" parent="GameOverlay/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 265.0
texture = ExtResource( 10 )

[node name="TexHeart3" type="TextureRect" parent="GameOverlay/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 265.0
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 136 )
current = true
script = ExtResource( 2 )

[node name="ShadowOverlay" type="Sprite" parent="."]
visible = false
material = ExtResource( 3 )
texture = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1

[node name="EntityContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 136 )
texture = ExtResource( 9 )
